--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-node_modules
-*.log
-.jshintignore
-.jshintrc
-dist/build.js
-dist/build.js.map
-.tags*
+.DS_Store
+node_modules/
+npm-debug.log
+yarn-error.log
+.idea
