--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
-    "babel-preset-latest": "^6.0.0",
+    "babel-preset-env": "^1.6.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.10.0",
     "sass-loader": "^4.0.2",
-    "file-loader": "^0.9.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
